--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
   "author": "kmturley",
   "license": "ISC",
   "devDependencies": {
-    "babel": "^5.4.7",
-    "gulp": "^3.8.11",
-    "gulp-babel": "^5.1.0",
+    "angular": "^1.4.8",
+    "babel-browser": "^6.1.19",
+    "babel-preset-es2015": "^6.1.18",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "es6-module-loader": "^0.17.8",
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.2.0",
     "gulp-html-replace": "^1.4.5",
     "gulp-minify-css": "^1.1.1",
-    "gulp-uglify": "^1.2.0"
-  }
+    "gulp-uglify": "^1.2.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {}
 }
