--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
   "author": "kmturley",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.4.8",
-    "babel-browser": "^6.1.19",
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
-    "es6-module-loader": "^0.17.8",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.5.2",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-combine-media-queries": "^0.2.0",
     "gulp-connect": "^2.2.0",
     "gulp-html-replace": "^1.4.5",
     "gulp-minify-css": "^1.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.2.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {}
