--- a/package.json
+++ b/package.json
@@ -37,10 +37,13 @@
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-connect": "^2.2.0",
     "gulp-html-replace": "^1.5.5",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jspm": "^0.5.5",
     "gulp-minify-css": "^1.2.2",
+    "gulp-minify-html": "^1.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
-    "gulp-uglify": "^1.5.1"
+    "gulp-uglify": "^1.5.1",
+    "imagemin-pngquant": "^4.2.0"
   }
 }
