--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     }
   },
   "devDependencies": {
+    "del": "^2.1.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-combine-media-queries": "^0.2.0",
