--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-combine-media-queries": "^0.2.0",
     "gulp-connect": "^2.2.0",
+    "gulp-esdoc": "^0.2.0",
     "gulp-html-replace": "^1.5.5",
     "gulp-imagemin": "^2.4.0",
     "gulp-jspm": "^0.5.5",
