--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
-    "imagemin-pngquant": "^4.2.0"
+    "imagemin-pngquant": "^4.2.0",
+    "sassdoc": "^2.1.16"
   }
 }
