--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
     "imagemin-pngquant": "^4.2.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-jspm": "^2.0.2",
     "sassdoc": "^2.1.16"
   }
 }
