--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "karma-jspm": "^2.0.2",
+    "require-dir": "^0.3.0",
     "sassdoc": "^2.1.16"
   }
 }
