--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
+    "gulp-webdriver": "^1.0.2",
     "imagemin-pngquant": "^4.2.0",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.15",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-jspm": "^2.0.2",
+    "jasmine": "^2.3.2",
     "require-dir": "^0.3.0",
-    "sassdoc": "^2.1.16"
+    "sassdoc": "^2.1.16",
+    "selenium-standalone": "^4.7.2",
+    "webdrivercss": "^2.0.0-beta-rc1",
+    "webdriverio": "^3.3.0"
   }
 }
