--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jasmine": "^2.3.2",
     "require-dir": "^0.3.0",
     "sassdoc": "^2.1.15",
+    "systemjs": "^0.19.6",
     "selenium-standalone": "^4.7.2",
     "webdrivercss": "^2.0.0-beta-rc1",
     "webdriverio": "^3.3.0"
