--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
     "gulp-connect": "^2.2.0",
     "gulp-esdoc": "^0.2.0",
     "gulp-html-replace": "^1.5.5",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jspm": "^0.5.5",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-minify-css": "^1.2.2",
-    "gulp-minify-html": "^1.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.1",
