--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-html-replace": "^1.5.5",
     "gulp-htmlmin": "^1.3.0",
     "gulp-imagemin": "^2.4.0",
+    "gulp-jsdoc": "^0.1.5",
     "gulp-jspm": "^0.5.5",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-minify-css": "^1.2.2",
